Added Hilt for dependency Injection Added ROOM support with dummy Data Added Home ViewModel to facilitate interaction with Data layer. Showing Images in ViewPager2 Added Dummy Data Refactored module structure

--- a/app/src/main/res/layout/item_cloth.xml
+++ b/app/src/main/res/layout/item_cloth.xml
@@ -13,11 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <ImageView
             android:id="@+id/ivCloth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{cloth.imgRes}"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:imageResource="@{cloth.imgRes}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
