--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.v15h4l.wardrobe.home.HomeFragment"
+        android:name="com.v15h4l.wardrobe.ui.home.HomeFragment"
         android:label="@string/label_home"/>
 
 </navigation>
