--- a/app/src/main/res/layout/item_cloth.xml
+++ b/app/src/main/res/layout/item_cloth.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            app:imageResource="@{cloth.imgRes}"
+            app:imageUri="@{cloth.imagePath}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
